<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id ="@+id/tela2"
    android:background="@drawable/back"
    tools:context="android.usuario.HomeCare.activities.Cadastro"
    tools:layout_editor_absoluteY="25dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNasc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRadioGroup">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/texto"
            android:textColorHint="@color/texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="95dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNasc">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/texto"
            android:textColorHint="@color/texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutNasc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNome">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextNasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/hint_nasc"
            android:inputType="date"
            android:maxLines="1"
            android:textColor="@color/texto"
            android:textColorHint="@color/texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutConfirmaSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/texto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo2_login"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="362dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutConfirmaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSenha"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/texto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextConfirmaSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirmaSenha"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="362dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/botao_customizado"
        android:text="@string/bt_registrar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/link_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmaSenha"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/link_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/bt_registrado"
        android:textColor="@color/texto"
        android:textSize="@dimen/registrar_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoM"
                android:textSize="@dimen/registrar_textsize" />

            <RadioButton
                android:id="@+id/feminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoF"
                android:textSize="@dimen/registrar_textsize" />
        </RadioGroup>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
        app:layout_constraintEnd_toStartOf="@+id/medida_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNasc"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/hint_peso"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/texto"
            android:textColorHint="@color/texto"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="413dp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutNasc"
        app:layout_constraintStart_toEndOf="@+id/medida_peso"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNasc"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/hint_altura"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/texto"
            android:textColorHint="@color/texto"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="413dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/medida_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/altura_medida"
        android:textColor="@color/texto"
        android:textColorHint="@color/texto"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutAltura"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutAltura"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutAltura" />

    <TextView
        android:id="@+id/medida_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/peso_medida"
        android:textColor="@color/texto"
        android:textColorHint="@color/texto"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutPeso"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutPeso"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutPeso" />


</android.support.constraint.ConstraintLayout>
