<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:id="@+id/tela1"
    tools:context="android.usuario.HomeCare.activities.Login">


    <TextView
        android:id="@+id/titulo_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/texto"
        android:textSize="@dimen/homecare_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sub_text"
        android:textSize="@dimen/sub_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_textview" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutSenha2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icone_doc"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/texto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextEmail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo1_login"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="271dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/botao_customizado"
        android:text="@string/bt_entrar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSenha2" />

    <TextView
        android:id="@+id/link_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bt_registro"
        android:textColor="@color/texto"
        android:textSize="@dimen/registrar_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutSenha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail2"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/texto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextSenha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/campo2_login"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="362dp" />
    </android.support.design.widget.TextInputLayout>


    <ImageView
        android:id="@+id/icone_doc"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_textview"
        app:srcCompat="@drawable/doctor" />

    <ImageView
        android:id="@+id/icone_campo1"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="175dp"
        android:layout_marginRight="175dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutSenha2"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail2"
        app:layout_constraintTop_toBottomOf="@+id/icone_doc"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login" />

    <ImageView
        android:id="@+id/icone_campo2"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutSenha2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail2"
        app:layout_constraintVertical_bias="0.452"
        app:srcCompat="@drawable/senha" />

</android.support.constraint.ConstraintLayout>
